<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="8dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </FrameLayout>

    <ImageView
        android:id="@+id/fotoCelula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomeCelula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomecelula"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/telefoneCelula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefonecelula"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/emailCelula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailcelula"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/enderecoCelula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enderecocelula"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/siteCelula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sitecelula"
            android:textSize="30sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>